--- a/nan/1.html
+++ b/nan/1.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<p align="center">
-		<a href="1.html">
+		<a href="index.html">
 			<img src="img/html5.jpg" alt="大美楠ui设计师"/>
 		</a>	
 		</p>
