--- a/nan/index.html
+++ b/nan/index.html
@@ -14,6 +14,6 @@
 	 <p>●&nbsp&nbs<em>2008年1月22日</em>，第一份正式草案公布</p>
 	 <hr size="3" color="#cccccc">
 	 <a href="3.html"><img src="img/down.png" alt="下一页" vspace="20"/></a>
-	 <a href="index.html"><img src="img/return.png"alt="返回" vspace="20" align="right"/></a>
+	 <a href="1.html"><img src="img/return.png"alt="返回" vspace="20" align="right"/></a>
 	</body>
 </html>
