--- a/nan/3.html
+++ b/nan/3.html
@@ -11,7 +11,7 @@
 		<img src="img/pic01.jpg".jpg" >
 		<img src="img/pic02.jpg">
 		<hr size="3"color="#CCCCCC">
-		<a href="1.html"><img src="img/up.png" alt="上一页" vspace="20"></a>
-		<a href="index.html"><img src="img/return.png" alt="返回" vspace="20" align="right"></a>
+		<a href="index.html"><img src="img/up.png" alt="上一页" vspace="20"></a>
+		<a href="1.html"><img src="img/return.png" alt="返回" vspace="20" align="right"></a>
 	</body>
 <ml>
